--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Spy - Social Deduction Party Game",
+    "name": "Spy - Guess the Spy ",
     "slug": "spy-social-deduction-party-game",
     "version": "1.0.0",
     "orientation": "portrait",
