--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "app.rork.spy-social-deduction-party-game",
+      "bundleIdentifier": "com.hackclub.spy",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
@@ -25,7 +25,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-  "package": "com.rork.spy"
+      "package": "com.rork.spy"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
