game name and fixed default topics

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Guess The Spy Party Game ",
+    "name": "spy",
     "slug": "spy-social-deduction-party-game",
     "version": "1.0.0",
     "orientation": "portrait",
