feat: add settings screen with customizable color schemes and game settings
- Implemented a new SettingsScreen component allowing users to customize color schemes, toggle game settings (roles, auto-start timer), and manage audio/feedback preferences.
- Integrated Zustand for state management, enabling persistent storage of user settings.
- Enhanced TopicsScreen with emoji picker for category icons and improved UI for category creation.
- Updated SplashScreen with animated logo and buttons, improving user experience during app launch.
- Refactored game logic to consider global role settings when starting a game.
- Upgraded dependencies, including async-storage to version 2.2.0.

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -45,7 +45,8 @@ jobs:
             -scheme spy \
             -configuration Release \
             -sdk iphoneos \
-            -archivePath $PWD/build/spy.xcarchive archive
+            -archivePath $PWD/build/spy.xcarchive \
+            DEVELOPMENT_TEAM=${{ secrets.APPLE_TEAM_ID }} archive
           xcodebuild \
             -exportArchive \
             -archivePath $PWD/build/spy.xcarchive \
