update app version to 1.1.0 and modify Info.plist for new versioning
fix: upgrade RNCAsyncStorage from 2.1.2 to 2.2.0 in Podfile.lock

refactor: update project.pbxproj to fix references and improve organization

style: change SplashScreen background color to black in storyboard and asset catalog

feat: implement useTheme hook for theme management

feat: add useVibration hook for haptic feedback control

fix: update Expo.plist to reflect new runtime version 1.1.0

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -41,13 +41,14 @@ jobs:
         run: |
           cd ios
           xcodebuild \
-            -workspace Spy.xcworkspace \
+            -workspace spy.xcworkspace \
             -scheme spy \
             -configuration Release \
             -sdk iphoneos \
             -archivePath $PWD/build/spy.xcarchive \
-            DEVELOPMENT_TEAM=${{ secrets.APPLE_TEAM_ID }} archive
-              -allowProvisioningUpdates \
+            DEVELOPMENT_TEAM=${{ secrets.APPLE_TEAM_ID }} \
+            -allowProvisioningUpdates \
+            archive
           xcodebuild \
             -exportArchive \
             -archivePath $PWD/build/spy.xcarchive \
