--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -6,11 +6,13 @@
 	<string>app-store</string>
 	<key>uploadBitcode</key>
 	<false/>
-	<key>uploadSymbols</key>
-	<true/>
 	<key>compileBitcode</key>
 	<true/>
+	<key>signingStyle</key>
+	<string>automatic</string>
+	<key>stripSwiftSymbols</key>
+	<true/>
 	<key>teamID</key>
-	<string>__TEAM_ID_PLACEHOLDER__</string>
+	<string>YOUR_TEAM_ID_HERE</string>
 </dict>
 </plist>
