--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "expo-app",
   "main": "expo-router/entry",
   "version": "1.1.0",
-  "workspaces": [
-    "website"
-  ],
+  "workspaces": [],
   "scripts": {
     "start": "bunx rork start -p o1d9kua2jj94sagp33bod --tunnel",
     "start-web": "bunx rork start -p o1d9kua2jj94sagp33bod --web --tunnel",
@@ -20,9 +18,9 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.6",
     "@stardazed/streams-text-encoding": "^1.0.2",
-    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query": "^5.87.1",
     "@ungap/structured-clone": "^1.3.0",
-    "expo": "53.0.22",
+    "expo": "^53.0.22",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
@@ -30,22 +28,22 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.5",
+    "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
-    "expo-router": "~5.1.5",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
+    "expo-router": "^5.1.4",
+    "expo-splash-screen": "^0.30.10",
+    "expo-status-bar": "^2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
     "expo-updates": "~0.28.17",
     "expo-web-browser": "^14.2.0",
-    "lucide-react-native": "^0.475.0",
+    "lucide-react-native": "^0.542.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native": "^0.81.1",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
@@ -58,7 +56,7 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.31.0",
     "eslint-config-expo": "^9.2.0",
-    "typescript": "~5.8.3"
+    "typescript": "^5.9.2"
   },
   "private": true
 }
