--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "expo lint",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "build:web": "expo export --platform web --output-dir website/play"
+    "build:web": "expo export --platform web --output-dir website/play",
+    "postinstall": "node ./scripts/patch-metro.js || true"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.20.0",
     "@expo/vector-icons": "^14.1.0",
     "@nkzw/create-context-hook": "^1.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -31,7 +33,7 @@
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
-    "expo-router": "^5.1.4",
+    "expo-router": "~5.1.5",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "^2.2.3",
     "expo-symbols": "~0.4.5",
@@ -39,11 +41,12 @@
     "expo-updates": "~0.28.17",
     "expo-web-browser": "^14.2.0",
     "lucide-react-native": "^0.542.0",
+    "metro": "0.80.12",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "^0.81.1",
-    "react-native-gesture-handler": "^2.28.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
@@ -54,9 +57,11 @@
     "@babel/core": "^7.25.2",
     "@expo/ngrok": "^4.1.0",
     "@types/react": "~19.0.10",
+    "babel-preset-expo": "^9.0.0",
     "eslint": "^9.31.0",
     "eslint-config-expo": "^9.2.0",
-    "typescript": "^5.9.2"
+    "patch-package": "^8.0.0",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
