--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
-    "expo-router": "~5.1.5",
+    "expo-router": "^5.1.4",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "^2.2.3",
     "expo-symbols": "~0.4.5",
@@ -41,7 +41,7 @@
     "expo-updates": "~0.28.17",
     "expo-web-browser": "^14.2.0",
     "lucide-react-native": "^0.542.0",
-    "metro": "0.80.12",
+    "metro": "^0.82.5",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-private-methods": "^7.27.1",
     "@expo/ngrok": "^4.1.0",
     "@types/react": "~19.0.10",
     "babel-preset-expo": "^9.0.0",
