--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "spy",
     "slug": "spy-social-deduction-party-game",
-  "version": "1.2.0",
+  "version": "1.2.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
@@ -38,7 +38,14 @@
           "origin": "https://rork.com/"
         }
       ],
-      "expo-font"
+      "expo-font",
+      [
+        "react-native-google-mobile-ads",
+        {
+          "androidAppId": "ca-app-pub-5514039766512542~3116292199",
+          "iosAppId": "ca-app-pub-5514039766512542~3116292199"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
@@ -51,7 +58,7 @@
         "projectId": "b8231e8f-73bb-40f6-aa55-11c9dd2fb3ea"
       }
     },
-  "runtimeVersion": "1.2.0",
+  "runtimeVersion": "1.2.1",
     "updates": {
       "url": "https://u.expo.dev/b8231e8f-73bb-40f6-aa55-11c9dd2fb3ea"
     }
